reformat project, might break things !!