@@ -69,10 +69,10 @@ public class GuiRenameWorld extends GuiScreen {
      */
     protected void keyTyped(char typedChar, int keyCode) throws IOException {
         this.field_146583_f.textboxKeyTyped(typedChar, keyCode);
-        this.buttonList.get(0).enabled = !this.field_146583_f.getText().trim().isEmpty();
+        this.buttonList.getFirst().enabled = !this.field_146583_f.getText().trim().isEmpty();
 
         if (keyCode == 28 || keyCode == 156) {
-            this.actionPerformed(this.buttonList.get(0));
+            this.actionPerformed(this.buttonList.getFirst());
         }
     }
 
