@@ -19,7 +19,7 @@ public class WeightedBakedModel implements IBakedModel {
     public WeightedBakedModel(List<WeightedBakedModel.MyWeighedRandomItem> p_i46073_1_) {
         this.models = p_i46073_1_;
         this.totalWeight = WeightedRandom.getTotalWeight(p_i46073_1_);
-        this.baseModel = p_i46073_1_.get(0).model;
+        this.baseModel = p_i46073_1_.getFirst().model;
     }
 
     public List<BakedQuad> getFaceQuads(EnumFacing facing) {
@@ -68,7 +68,7 @@ public class WeightedBakedModel implements IBakedModel {
         }
 
         public IBakedModel first() {
-            return this.listItems.get(0).model;
+            return this.listItems.getFirst().model;
         }
     }
 
