@@ -159,8 +159,7 @@ public class ShaderGroup {
                             if (flag) {
                                 RenderSystem.linearFilter();
                             } else {
-                                GL11.glTexParameteri(GL11.GL_TEXTURE_2D, GL11.GL_TEXTURE_MIN_FILTER, GL11.GL_NEAREST);
-                                GL11.glTexParameteri(GL11.GL_TEXTURE_2D, GL11.GL_TEXTURE_MAG_FILTER, GL11.GL_NEAREST);
+                                RenderSystem.nearestFilter();
                             }
 
                             shader.addAuxFramebuffer(s4, itextureobject.getGlTextureId(), j, k);
@@ -200,7 +199,7 @@ public class ShaderGroup {
     private void initUniform(JsonElement p_148028_1_) throws JsonException {
         JsonObject jsonobject = JsonUtils.getJsonObject(p_148028_1_, "uniform");
         String s = JsonUtils.getString(jsonobject, "name");
-        ShaderUniform shaderuniform = this.listShaders.get(this.listShaders.size() - 1).getShaderManager().getShaderUniform(s);
+        ShaderUniform shaderuniform = this.listShaders.getLast().getShaderManager().getShaderUniform(s);
 
         if (shaderuniform == null) {
             throw new JsonException("Uniform '" + s + "' does not exist");
