@@ -41,7 +41,7 @@ public class EntityEnderman extends EntityMob {
         this.tasks.addTask(11, new EntityEnderman.AITakeBlock(this));
         this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false));
         this.targetTasks.addTask(2, new EntityEnderman.AIFindPlayer(this));
-        this.targetTasks.addTask(3, new EntityAINearestAttackableTarget<>(this, EntityEndermite.class, 10, true, false, p_apply_1_ -> p_apply_1_.isSpawnedByPlayer()));
+        this.targetTasks.addTask(3, new EntityAINearestAttackableTarget<>(this, EntityEndermite.class, 10, true, false, EntityEndermite::isSpawnedByPlayer));
     }
 
     protected void applyEntityAttributes() {
@@ -368,12 +368,12 @@ public class EntityEnderman extends EntityMob {
         public boolean shouldExecute() {
             double d0 = this.getTargetDistance();
             List<EntityPlayer> list = this.taskOwner.worldObj.getEntitiesWithinAABB(EntityPlayer.class, this.taskOwner.getEntityBoundingBox().expand(d0, 4.0D, d0), this.targetEntitySelector);
-            Collections.sort(list, this.theNearestAttackableTargetSorter);
+            list.sort(this.theNearestAttackableTargetSorter);
 
             if (list.isEmpty()) {
                 return false;
             } else {
-                this.player = list.get(0);
+                this.player = list.getFirst();
                 return true;
             }
         }
