@@ -22,7 +22,7 @@ public class S26PacketMapChunkBulk implements Packet<INetHandlerPlayClient> {
         this.xPositions = new int[i];
         this.zPositions = new int[i];
         this.chunksData = new S21PacketChunkData.Extracted[i];
-        this.isOverworld = !chunks.get(0).getWorld().provider.getHasNoSky();
+        this.isOverworld = !chunks.getFirst().getWorld().provider.getHasNoSky();
 
         for (int j = 0; j < i; ++j) {
             Chunk chunk = chunks.get(j);
