@@ -36,12 +36,8 @@ public class ExpressionParser {
         try {
             Token[] atoken = TokenParser.parse(str);
 
-            if (atoken == null) {
-                return null;
-            } else {
-                Deque<Token> deque = new ArrayDeque<>(Arrays.asList(atoken));
-                return this.parseInfix(deque);
-            }
+            Deque<Token> deque = new ArrayDeque<>(Arrays.asList(atoken));
+            return this.parseInfix(deque);
         } catch (IOException ioexception) {
             throw new ParseException(ioexception.getMessage(), ioexception);
         }
@@ -92,7 +88,7 @@ public class ExpressionParser {
         if (listExpr.size() != listFunc.size() + 1) {
             throw new ParseException("Invalid infix expression, expressions: " + listExpr.size() + ", operators: " + listFunc.size());
         } else if (listExpr.size() == 1) {
-            return listExpr.get(0);
+            return listExpr.getFirst();
         } else {
             int i = Integer.MAX_VALUE;
             int j = Integer.MIN_VALUE;
@@ -108,7 +104,7 @@ public class ExpressionParser {
                 }
 
                 if (listExpr.size() == 1 && listFunc.isEmpty()) {
-                    return listExpr.get(0);
+                    return listExpr.getFirst();
                 } else {
                     throw new ParseException("Error merging operators, expressions: " + listExpr.size() + ", operators: " + listFunc.size());
                 }
@@ -285,7 +281,7 @@ public class ExpressionParser {
         Iterator<Token> iterator = deque.iterator();
 
         while (iterator.hasNext()) {
-            Token token = (Token) iterator.next();
+            Token token = iterator.next();
             iterator.remove();
 
             if (i == 0 && token.getType() == tokenTypeEnd) {
